--- a/tattooSaloon/package.json
+++ b/tattooSaloon/package.json
@@ -2,6 +2,7 @@
   "name": "tattoosaloon",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://kukuliak-dmytro.github.io/Tatto-artist-portfolio/",
   "type": "module",
   "scripts": {
     "dev": "vite",
