--- a/tattooSaloon/package.json
+++ b/tattooSaloon/package.json
@@ -2,10 +2,11 @@
   "name": "tattoosaloon",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://kukuliak-dmytro.github.io/Tatto-artist-portfolio/",
   "type": "module",
   "scripts": {
     "predeploy" : "npm run build",
-    "deploy" : "main /",
+    "deploy" : "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
