--- a/tattooSaloon/package.json
+++ b/tattooSaloon/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "Tattoo-artist-portfolio",
   "scripts": {
     "predeploy" : "npm run build",
     "deploy" : "gh-pages -d dist",
